--- a/SortApp/templates/SortApp/merge/mergesort.html
+++ b/SortApp/templates/SortApp/merge/mergesort.html
@@ -1,6 +1,332 @@
-<html>
-<head></head>
-<body>
-    {{ req }}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Code_Region</title>
+	<!-- CSS only -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Averia+Libre:wght@300&family=Sora:wght@200&display=swap" rel="stylesheet">
+<style>
+body {
+    position: relative;
+  }
+
+#myScrollspy{
+  position :fixed;
+  top :130px;
+}
+  #section1,#section2,#section3,#section4,#section5,#section6 {
+ -webkit-box-shadow: 0 7px 8px rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0 7px 8px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 7px 8px rgba(0, 0, 0, 0.12);
+  height:100%;
+  font-family : 'Roboto+Mono';
+  padding-top: 60px;
+  padding-right: 50px;
+  padding-bottom: 50px;
+  padding-left: 50px;
+  background-color:lightblue;
+  margin-bottom:10px;
+  }
+  #title{
+    text-align: justify;
+    font-size : 40px;
+
+  }
+.contain{
+  font-size:30px;
+  font-family: 'Alegreya Sans', sans-serif;
+}
+  @media screen and (max-width: 810px) {
+    #section1, #section2, #section3, #section4, #section4  {
+      
+    }
+  }
+
+/* Style the header */
+header {
+  background-color: #2B2B2B;
+  padding: 30px;
+  text-align: center;
+  
+  color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 88px;
+  
+  font-family : 'Roboto+Mono';
+  -webkit-box-shadow: 0 7px 8px rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0 7px 8px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 7px 8px rgba(0, 0, 0, 0.12);
+  color: white;
+  text-align: center;
+  font-size: 30px; 
+  font-weight: bold;
+  width: 100%;
+  transition: 0.2s;
+}
+
+div.col-sm-9 div {
+    height: 250px;
+    font-size: 28px;
+  }
+.header__content-text {
+  text-align: center;
+  padding: 15px 20px;
+}
+
+.page__content-container {
+  
+  margin-top: 15rem;
+}
+
+table,th,tr,td{
+  text-align:center;
+  border: 1px solid black;
+  
+}
+table{
+  width: 100%;
+}
+#bold{
+  font-weight: bold;
+}
+.ais{
+  background-color:lightblue;
+}
+.square {
+  height: 90px;
+  width: 300px;
+  background-color: lightblue;
+
+}
+.text{
+  background-color: yellow;
+margin-bottom: 5px;
+box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.5);
+font-family: 'ProximaNova-Bold';
+border: 0;
+width: 100px;
+height:100px;
+text-align: center;
+text-transform: capitalize;
+padding:15px;
+padding-left:21px;
+text-transform:uppercase;
+
+}
+ input:focus, textarea:focus, select:focus{
+       
+    }
+    footer {
+    background-color: #2d2d30;
+    color: #f5f5f5;
+    padding: 32px;
+  }
+  footer a {
+    color: #f5f5f5;
+  }
+  footer a:hover {
+    color: #777;
+    text-decoration: none;
+  }
+</style>
+</head>
+<body data-spy="scroll" data-target="#myScrollspy" data-offset="20">
+<header id="header">Welcome to Merge Sort</header>
+
+<div class="container">
+  <div class="row page__content-container">
+    <div class="col-xs-3">
+        <nav class="" id="myScrollspy">
+      <ul class="nav nav-pills nav-stacked" style="font-family: 'Sora', sans-serif;font-size:20px;">
+        <li class="active"><a href="#section1">Introduction - </a></li>
+        <li><a href="#section2">Algorithm -</a></li>
+        
+        <li><a href="#section4">Flowchart -</a></li>
+        <li><a href="#section5">Example -</a></li>
+        <li><a href="#section6">Practise -</a></li>
+        <!--<li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Section 4 <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#section41">Section 4-1</a></li>
+            <li><a href="#section42">Section 4-2</a></li>                     
+          </ul>
+        </li>-->
+      </ul>
+    </nav>
+    </div>
+    <div class="col-xs-9 ">
+      <div id="section1" class="ais">    
+        <p id="title">What is Merge Sort ?</p>
+        <div class="contain">
+          <p>&emsp;&emsp;&emsp;Merge Sort is one of the most popular sorting algorithms that is based on the principle of Divide and Conquer Algorithm. It divides the input array into two halves, calls itself for the two halves, and then merges the two sorted halves. The merge() function is used for merging two halves. The merge(arr, l, m, r) is a key process that assumes that arr[l..m] and arr[m+1..r] are sorted and merges the two sorted sub-arrays into one. </p>
+          <p>&emsp;&emsp;&emsp;The time and space complexity for merge sort is: <br> •	Time complexity (Best Case) : O(n log n) <br>•	Time complexity (Worst Case) : O(n log n) <br>•	Time complexity (Average Case) : O(n log n) <br>•	Space complexity : O(1) </p>
+        </div>
+      </div>
+      <div id="section2"> 
+        <p id="title">Algorithm :</p>
+        <div class="contain" > 
+          <p> Merge sort Algorithm is as follows: <br>
+            <b>Step 1</b>:  [INITIALIZE] SET I = BEG, J = MID + 1, INDEX = 0 <br>
+            <b>Step 2</b>:  Repeat while (I <= MID) AND (J<=END)<br>
+                             &emsp;&emsp;&emsp;IF ARR[I] < ARR[J]<br>
+                             &emsp;&emsp;&emsp;SET TEMP[INDEX] = ARR[I]<br>
+                             &emsp;&emsp;&emsp;SET I = I + 1<br>
+                             &emsp;&emsp;&emsp;ELSE<br>
+                             &emsp;&emsp;&emsp;SET TEMP[INDEX] = ARR[J]<br>
+                             &emsp;&emsp;&emsp;SET J = J + 1<br>
+                             &emsp;&emsp;&emsp;[END OF IF]<br>
+                             &emsp;&emsp;&emsp;SET INDEX = INDEX + 1<br>
+                             &emsp;&emsp;&emsp;[END OF LOOP]
+            <br> 
+            <b>Step 3</b>:  [Copy the remaining elements of right sub-array, if any] <br>
+            &emsp;&emsp;&emsp;IF I > MID <br>
+            &emsp;&emsp;&emsp;Repeat while J <= END <br>
+            &emsp;&emsp;&emsp;SET TEMP[INDEX] = ARR[J] <br>
+            &emsp;&emsp;&emsp;SET INDEX = INDEX + 1, SET J = J + 1 <br>
+            &emsp;&emsp;&emsp;[END OF LOOP] <br>
+            &emsp;&emsp;&emsp;[Copy the remaining elements of left sub-array, if any] <br>
+            &emsp;&emsp;&emsp;ELSE <br>
+            &emsp;&emsp;&emsp;Repeat while I <= MID <br>
+            &emsp;&emsp;&emsp;SET TEMP[INDEX] = ARR[I] <br>
+            &emsp;&emsp;&emsp;SET INDEX = INDEX + 1, SET I = I + 1 <br>
+            &emsp;&emsp;&emsp;[END OF LOOP] <br>
+            &emsp;&emsp;&emsp;[END OF IF] <br>
+            <b>Step 4</b>:  [Copy the contents of TEMP back to ARR] SET K = 0 <br>
+            <b>Step 5</b>:  Repeat while K < INDEX <br>
+            &emsp;&emsp;&emsp;SET ARR[K] = TEMP[K] <br>
+            &emsp;&emsp;&emsp;SET K = K + 1 <br>
+            &emsp;&emsp;&emsp;[END OF LOOP] <br>
+            <b>Step 6</b>:  Exit <br>
+          </p>
+            <p> MERGE_SORT(ARR, BEG, END): <br>
+            <b>Step 1</b>:    IF BEG < END <br>
+            &emsp;&emsp;&emsp;SET MID = (BEG + END)/2 <br>
+            &emsp;&emsp;&emsp;CALL MERGE_SORT (ARR, BEG, MID) <br>
+            &emsp;&emsp;&emsp;CALL MERGE_SORT (ARR, MID + 1, END) <br>
+            &emsp;&emsp;&emsp;MERGE (ARR, BEG, MID, END) <br>
+            &emsp;&emsp;&emsp;[END OF IF] <br>
+            <b>Step 2</b>:   END <br>
+          </p>
+        </div>
+      </div>        
+      
+      <div id="section4">    
+      <p id="title">Flowchart : </p>  <br>    
+      <div >
+        <img src={% static "merge2.png" %}>
+      </div>
+      </div>
+      <div id="section5">  
+      <p id="title">	Example demonstrating Merge sort:</p>  
+      <div class="contain">      
+        <p>Consider the following array of 7 elements. <br>
+           Sort the array by using merge sort. <br>
+           A = {10, 5, 2, 23, 45, 21, 7}  <br>
+           <br>
+            <div >
+        <img src={% static "merge1.png" %}>
+      </div>
+        </p>
+      </div>
+      </div>
+      <div id="section6">    
+        <p id="title">Practise : </p>  <br>    
+        <form method="POST" action="/{{ req }}/">
+          <div class="contain" >
+          {% csrf_token %}
+            <p id="bold"> Enter Elements in below array -</p>
+    
+          </div>
+        </br>
+        <input onclick="myFunction()" id ="asd"  class="text" placeholder="arr(0)"><br>
+        <div class="contain" >
+    
+          <p id="bold"> Enter Element you want to find -</p>
+
+    
+          
+          
+          <button type="submit" name="sub" id="sub" class="btn btn-primary btn-lg">
+            Submit
+          </button>
+          <input type="hidden" />
+    </div>
+  </form>
+      </div>
+     </div>
+    </div>
+  </div>
+</div>
+<!-- Footer -->
+<footer class="text-center">
+  
+    
+  </a><br><br>
+  <p> Make your-self perfect. Connect us <a href="https://coderegion.herokuapp.com/" data-toggle="tooltip" title="Visit Code_Region">www.coderegion.herokuapp.com/</a></p> 
+</footer>
+<script>
+// When the user scrolls down 50px from the top of the document, resize the header's font size
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
+    document.getElementById("header").style.width = "39rem";
+  } else {
+    document.getElementById("header").style.width = "100%";
+  }
+ 
+}
+
+</script>   
+      <script>
+    let val = 0;
+
+    function myFunction() {
+      const newinput = document.createElement("input");
+      newinput.type = "text";
+      newinput.setAttribute("id", "asd");
+      newinput.setAttribute('class', "text");
+      newinput.setAttribute('placeholder', `arr ${val}`);
+      newinput.setAttribute("onclick", "myFunction()");
+
+      const old = document.getElementById("asd");
+      insertAfter(newinput, old);
+      val = val + 1;
+      old.setAttribute("id", val);
+      old.setAttribute("name", val);
+      newinput.setAttribute('placeholder', `arr ${val}`);
+      old.setAttribute("onclick", "");
+      const sub = document.getElementById("sub");
+      sub.setAttribute("value", val);
+    }
+    function insertAfter(newNode, currentNode) {
+      currentNode.parentNode.insertBefore(newNode, currentNode.nextSibling);
+      newNode;
+    }
+  </script>
+
 </body>
+
+
 </html>
+
+
+         
